--- a/original_html/index.html
+++ b/original_html/index.html
@@ -17,7 +17,7 @@
     <!--navigation toolbar-->
     <nav class="nonactive-nav">
       <div class="options-to-choose">
-        <a href=# id="new-measure">Unesi novo mjerenje</a>
+        <a href=/input_new_measuring id="new-measure">Unesi novo mjerenje</a>
         <a href="#" id='new-multiple-measures'>Unesi niz novih mjerenja</a>
         <a href="#" id='graphics'>Graficki prikaz zadnjih mjerenja</a>
       </div>
