--- a/original_html/index.html
+++ b/original_html/index.html
@@ -10,10 +10,12 @@
     <!--main image and title-->
     <div class="header-title-box">
       <figure class="logo">
-        <img src="https://www.welchallyn.com/content/dam/welchallyn/images/Product-Images/Cardiopulmonary/Ambulatory-Blood-Pressure-Monitor/ABPM%207100/PWA_icon.png" alt="Heart-rate_logo">
+        <img
+          src="https://www.welchallyn.com/content/dam/welchallyn/images/Product-Images/Cardiopulmonary/Ambulatory-Blood-Pressure-Monitor/ABPM%207100/PWA_icon.png"
+          alt="Heart-rate_logo">
       </figure>
       <h1 class="main-title-text">Dijagram mjerenja tlaka</h1>
-    </div>
+      </div>
     <!--navigation toolbar-->
     <nav class="nonactive-nav">
       <div class="options-to-choose">
